# moai-dev

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Gemfile  README  README.md  README.txt  _config.yml  appveyor.yml  build-mac.xml  build-pc.xml  circle.yml  env.sh  index.html  placeholder.txt  version.txt  vulkan.txt
cmake/: CMakeLists.txt  Makefile  TODO.txt  build-android.bat  build-android.sh  build-html.bat  build-html.sh  build-linux.sh  build-windows.bat  env-linux.sh  env-local.bat.template  env-local.sh  env-local.sh.template  env-osx.sh  env-win.bat
cmake/aku/: CMakeLists.txt
cmake/box2d/: CMakeLists.txt
cmake/chipmunk/: CMakeLists.txt
cmake/cmake/: CMakeLists.txt
cmake/cmake-modules/: FindXCB.cmake  libmoai-setup.cmake  module-config.cmake  module-setup.cmake  platform-android.cmake  platform-blackberry.cmake  platform-common.cmake  platform-html.cmake  platform-ios.cmake  platform-linux.cmake  platform-osx.cmake  platform-windows.cmake
cmake/contrib/: CMakeLists.txt
cmake/expat/: CMakeLists.txt
cmake/freetype/: CMakeLists.txt
cmake/glew/: CMakeLists.txt
cmake/glewinfo/: CMakeLists.txt  glewinfo
cmake/host-android/: CMakeLists.txt  android.toolchain.cmake
cmake/host-flascc/: CMakeLists.txt
cmake/host-glut/: CMakeLists.txt  Makefile
cmake/host-html/: CMakeLists.txt  Makefile  app.js  hanappe.html  hellomoai.data.js  howler.js  library_webuntz.js  moai.html  moaicallbacks.js  moaihost.js  package.json  sounds.data.js  soundtest.html  webuntz.js
cmake/host-ios/: CMakeLists.txt  build_resources.rb  moai-Info.plist
cmake/host-modules/: CMakeLists.txt  moai_config.h.in
cmake/host-sdl/: CMakeLists.txt
cmake/host-test/: CMakeLists.txt
cmake/hosts/: CMakeLists.txt
cmake/http-host/: CMakeLists.txt
cmake/jansson/: CMakeLists.txt
cmake/libcares/: CMakeLists.txt  ares_config.h
cmake/libcrypto/: CMakeLists.txt  buildinf.h
cmake/libcurl/: CMakeLists.txt
cmake/libjpg/: CMakeLists.txt
cmake/libmoai/: CMakeLists.txt
cmake/libogg/: CMakeLists.txt
cmake/libpng/: CMakeLists.txt
cmake/libssl/: CMakeLists.txt
cmake/libvorbis/: CMakeLists.txt
cmake/lua/: CMakeLists.txt  lua
cmake/lua-lib/: CMakeLists.txt
cmake/luac/: CMakeLists.txt
cmake/luaext/: CMakeLists.txt
cmake/moai/: CMakeLists.txt
cmake/moai-android/: CMakeLists.txt
cmake/moai-audiosampler/: CMakeLists.txt
cmake/moai-box2d/: CMakeLists.txt  Makefile
cmake/moai-chipmunk/: CMakeLists.txt  Makefile
cmake/moai-core/: CMakeLists.txt  Makefile
cmake/moai-crypto/: CMakeLists.txt
cmake/moai-host-glut/: CMakeLists.txt
cmake/moai-http-client/: CMakeLists.txt  Makefile
cmake/moai-iphone/: CMakeLists.txt
cmake/moai-luaext/: CMakeLists.txt
cmake/moai-plugins/: CMakeLists.txt
cmake/moai-sim/: CMakeLists.txt  Makefile
cmake/moai-test/: CMakeLists.txt
cmake/moai-untz/: CMakeLists.txt  Makefile
cmake/moai-util/: CMakeLists.txt  Makefile
cmake/moaicore/: CMakeLists.txt
cmake/moaiext-server/: CMakeLists.txt
cmake/moaiext-test/: CMakeLists.txt
cmake/ooid/: CMakeLists.txt  dummy.cpp
cmake/sqlite3/: CMakeLists.txt
cmake/tinyxml/: CMakeLists.txt
cmake/tlsf/: CMakeLists.txt
cmake/untz/: CMakeLists.txt
cmake/uslscore/: CMakeLists.txt
cmake/visualinfo/: CMakeLists.txt  visualinfo
cmake/zlcore/: CMakeLists.txt  Makefile
cmake/zlib/: CMakeLists.txt
flascc/: CMakeLists.txt  readme.txt
flascc/aku/: CMakeLists.txt
flascc/flascc-host/: CMakeLists.txt  README.txt
flascc/moai-core/: CMakeLists.txt
flascc/moai-untz/: CMakeLists.txt
flascc/untz/: CMakeLists.txt
flascc/uslscore/: CMakeLists.txt
flascc/zlcore/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  MOAIKeyboardIOSListener.h  MOAIKeyboardIOSListener.m
src/aku/: AKU-adcolony.h  AKU-adcolony.mm  AKU-audiosampler.cpp  AKU-burstly.h  AKU-burstly.mm  AKU-chartboost.h  AKU-chartboost.mm  AKU-debugger.cpp  AKU-debugger.h  AKU-fmod-designer.cpp  AKU-fmod-designer.h  AKU-fmod-ex.cpp  AKU-fmod-ex.h  AKU-fmod.cpp  AKU-fmod.h  AKU-harness.cpp  AKU-harness.h  AKU-iphone.h  AKU-iphone.mm  AKU-luaext.cpp  AKU-luaext.h  AKU-luasocket.cpp  AKU-luasocket.h  AKU-moaiext-config.h  AKU-moaiext.cpp  AKU-moaiext.h  AKU-mobclix.h  AKU-mobclix.mm  AKU-particles.cpp  AKU-particles.h  AKU-smartfox.h  AKU-smartfox.mm  AKU-test.cpp  AKU-test.h  AKU-untz.cpp  AKU-untz.h  AKU-vungle.h  AKU-vungle.mm  AKU.cpp  AKU.h  (+3 more)
src/config-default/: moai_config.h  moai_version.h  moai_version_author.h  moai_version_author.h.in  moai_version_major.h  moai_version_minor.h  moai_version_minor.h.in  moaicore-config.h  moaicore-config.h.REMOTE.h  zl_gfx_config.h  zl_util_config.h  zl_vfs_config.h
src/df-profiler/: USProfileConfig.h  USProfileReport.cpp  USProfileReport.h  USProfileReportBase.cpp  USProfileReportBase.h  USProfileScope.cpp  USProfileScope.h  USProfiler.cpp  USProfiler.h
src/host-chrome/: MOAIApp.cpp  MOAIApp.h  NaClFile.h  NaClHost.cpp  geturl_handler.cc  geturl_handler.h  moai_nacl.h
src/host-flascc/: Console.as
src/host-glut/: FolderWatcher-mac.mm  FolderWatcher-win.cpp  FolderWatcher-win.h  GlutHost.cpp  GlutHost.h  GlutHostMain.cpp  ParticlePresets.cpp
src/host-google-test/: ZLAbstractFinalizable.cpp  ZLAbstractFinalizable.h  ZLAbstractFinalizable_HasInternal.h  ZLAbstractFinalizable_Internal.cpp  ZLAbstractFinalizable_Internal.h  ZLAbstractHasLinkedFinalizableMembership.h  ZLAbstractLinkedFinalizable.cpp  ZLAbstractLinkedFinalizable.h  ZLLinkedFinalizableMembership.cpp  ZLLinkedFinalizableMembership.h  ZLLinkedFinalizableWithDependency.h  moai_gtest.h  moai_gtest_MOAICmd.cpp  moai_gtest_MOAICmd.lua.h  moai_gtest_ZLQuaternion.cpp  moai_gtest_composition.cpp  moai_gtest_destructors.cpp  moai_gtest_finalizable.cpp  moai_gtest_func_composer.cpp  moai_gtest_libtess2.cpp  moai_gtest_linked_finalizable.cpp  moai_gtest_lua_binding.cpp  moai_gtest_lua_lifecycle.cpp  moai_gtest_main.cpp  moai_gtest_rtti.cpp  moai_gtest_virtual_inheritance.cpp
src/host-html/: HtmlHost.cpp  HtmlHost.h  README.md  libmoai-post.js  (+3 more)
unit-tests/: CMakeLists.txt  moai-unit-tests
(+9977 files in other folders)
